resolved responsive design issues with shrinking the page and updated the about section to handle overflow

--- a/sass/desktopStyle.scss
+++ b/sass/desktopStyle.scss
@@ -115,6 +115,7 @@ h1{
 /* ================================================= */
 .aboutContent{
     display:none;
+    flex-direction:column;
     margin:auto;
     height:80vh;
     width:80vw;
@@ -122,9 +123,9 @@ h1{
     border-radius:10px;
 }
 #aboutText{
-    height:100%;
     width:50%;
     margin:0 auto;
+    overflow:auto;
 }
 #aboutText p{
     text-align:center;
